# hallock-gnome-volume-manager

./: ChangeLog  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.in  gnome-volume-manager.desktop.in  gnome-volume-manager.schemas.in  gnome-volume-properties.desktop.in  gnome-volume-properties.glade
centos-rpm/: cdda-url-handler.schemas  gnome-cdda-handler  gnome-volume-manager-0.9.10.add-to-base.patch  gnome-volume-manager-1.5.11-rh-defaults.patch  gnome-volume-manager-2.15.0-check-screensaver.patch  gnome-volume-manager-2.15.0.add-console-user-check.patch  gnome-volume-manager.spec  gthumb-import
po/: ChangeLog  LINGUAS  POTFILES.in  ang.po  ar.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  mk.po  nb.po  ne.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  (+11 more)
src/: Makefile.am  Makefile.in  TODO  clipboard.c  gvm.h  manager.c  properties.c
